manifests/uptimekuma/ingressroute.yaml
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: uptimekuma-route
# spec:
#   entryPoints:
#   - websecure
#   - web
#   routes:
#   - kind: Rule
#     match: Host(`uptime.alexbissessur.dev`)
#     services:
#     - name: uptime-kuma-svc
#       port: 3001
#   tls:
#     certResolver: le

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gts
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - uptime.alexbissessur.dev
    secretName: uptime-tls
  rules:
  - host: uptime.alexbissessur.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-svc
            port:
              number: 3001
